[gd_scene load_steps=17 format=2]

[ext_resource path="res://images/editor/textures/white.png" type="Texture" id=1]
[ext_resource path="res://scripts/editor/Cube.gd" type="Script" id=2]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 5, 5, 5 )

[sub_resource type="SpatialMaterial" id=2]
resource_local_to_scene = true
albedo_texture = ExtResource( 1 )

[sub_resource type="PlaneMesh" id=3]
size = Vector2( 10, 10 )

[sub_resource type="BoxShape" id=4]
extents = Vector3( 0.1, 5, 5 )

[sub_resource type="SpatialMaterial" id=5]
resource_local_to_scene = true
albedo_texture = ExtResource( 1 )

[sub_resource type="PlaneMesh" id=6]
size = Vector2( 10, 10 )

[sub_resource type="SpatialMaterial" id=7]
resource_local_to_scene = true
albedo_texture = ExtResource( 1 )

[sub_resource type="PlaneMesh" id=8]
size = Vector2( 10, 10 )

[sub_resource type="SpatialMaterial" id=9]
resource_local_to_scene = true
albedo_texture = ExtResource( 1 )

[sub_resource type="PlaneMesh" id=10]
size = Vector2( 10, 10 )

[sub_resource type="SpatialMaterial" id=11]
resource_local_to_scene = true
albedo_texture = ExtResource( 1 )

[sub_resource type="PlaneMesh" id=12]
size = Vector2( 10, 10 )

[sub_resource type="SpatialMaterial" id=13]
resource_local_to_scene = true
albedo_texture = ExtResource( 1 )

[sub_resource type="PlaneMesh" id=14]
size = Vector2( 10, 10 )

[node name="Cube" type="Spatial"]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="StaticBody" type="StaticBody" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="StaticBody"]
shape = SubResource( 1 )

[node name="XP" type="MeshInstance" parent="."]
transform = Transform( 1.19249e-08, 1, 0, 4.37114e-08, -5.21254e-16, -1, -1, 1.19249e-08, -4.37114e-08, 5, 0, 0 )
material_override = SubResource( 2 )
use_in_baked_light = true
mesh = SubResource( 3 )
material/0 = null

[node name="Area" type="Area" parent="XP"]
transform = Transform( -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0, 1, 0, 0, 0 )
input_capture_on_drag = true

[node name="CollisionShape" type="CollisionShape" parent="XP/Area"]
shape = SubResource( 4 )

[node name="XM" type="MeshInstance" parent="."]
transform = Transform( 4.37114e-08, -1, 1.4243e-14, 1.94707e-07, -5.73206e-15, -1, 1, 4.37114e-08, 1.94707e-07, -5, 0, 0 )
material_override = SubResource( 5 )
use_in_baked_light = true
mesh = SubResource( 6 )
material/0 = null

[node name="Area" type="Area" parent="XM"]
transform = Transform( -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0, 1, 0, 0, 0 )
input_capture_on_drag = true

[node name="CollisionShape" type="CollisionShape" parent="XM/Area"]
shape = SubResource( 4 )

[node name="YM" type="MeshInstance" parent="."]
transform = Transform( -1, 3.25841e-07, 0, -3.25841e-07, -1, 0, 0, 0, 1, 0, -5, 0 )
material_override = SubResource( 7 )
use_in_baked_light = true
mesh = SubResource( 8 )
material/0 = null

[node name="Area" type="Area" parent="YM"]
input_capture_on_drag = true

[node name="CollisionShape" type="CollisionShape" parent="YM/Area"]
transform = Transform( -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0, 1, 0, 0, 0 )
shape = SubResource( 4 )

[node name="YP" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 0 )
material_override = SubResource( 9 )
mesh = SubResource( 10 )
material/0 = null

[node name="Area" type="Area" parent="YP"]
input_capture_on_drag = true

[node name="CollisionShape" type="CollisionShape" parent="YP/Area"]
transform = Transform( -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0, 1, 0, 0, 0 )
shape = SubResource( 4 )

[node name="ZP" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 5 )
material_override = SubResource( 11 )
use_in_baked_light = true
mesh = SubResource( 12 )
material/0 = null

[node name="Area" type="Area" parent="ZP"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )
input_capture_on_drag = true

[node name="CollisionShape" type="CollisionShape" parent="ZP/Area"]
transform = Transform( 4.88762e-07, -1, 5.30863e-14, 1.62921e-07, 2.65431e-14, -1, 1, 4.88762e-07, 1.62921e-07, 0, 0, 0 )
shape = SubResource( 4 )

[node name="ZM" type="MeshInstance" parent="."]
transform = Transform( -1, 0, -3.25841e-07, 3.25841e-07, -4.37114e-08, -1, -1.4243e-14, -1, 4.37114e-08, 0, 0, -5 )
material_override = SubResource( 13 )
use_in_baked_light = true
mesh = SubResource( 14 )
material/0 = null

[node name="Area" type="Area" parent="ZM"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )
input_capture_on_drag = true

[node name="CollisionShape" type="CollisionShape" parent="ZM/Area"]
transform = Transform( 4.88762e-07, -1, 5.30863e-14, 1.62921e-07, 2.65431e-14, -1, 1, 4.88762e-07, 1.62921e-07, 0, 0, 0 )
shape = SubResource( 4 )
[connection signal="input_event" from="XP/Area" to="." method="_on_XP_select"]
[connection signal="input_event" from="XM/Area" to="." method="_on_XM_select"]
[connection signal="input_event" from="YM/Area" to="." method="_on_YM_select"]
[connection signal="input_event" from="YP/Area" to="." method="_on_YP_select"]
[connection signal="input_event" from="ZP/Area" to="." method="_on_ZP_select"]
[connection signal="input_event" from="ZM/Area" to="." method="_on_ZM_select"]
